--- a/BeluqaTahir/BeluqaTahir.WebUI/Views/_ViewImports.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using BeluqaTahir.Domain.Model.Entity
 @using BeluqaTahir.Domain.Model.ViewModels
+@using BeluqaTahir.Domain.Model.ViewModels
