--- a/BeluqaTahir/BeluqaTahir.WebUI/Views/Shop/Details.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Views/Shop/Details.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Product
 @{
     ViewData["Title"] = "Details";
 }
@@ -110,10 +110,10 @@
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-6 productsingle">
-            <img src="/assets/images/product-single.jpg" alt="">
+            <img src="/assets/images/@Model.ImagePati" alt="">
         </div>
         <div class="col-md-6 productsingle">
-            <h3>Bacardi 151 Degree</h3>
+            <h3>@Model.FullName</h3>
             <div class="rating d-flex">
                 <p class="text-left ">
                     <a style="color: red;" href="#" class="mr-2">5.0</a>
@@ -130,9 +130,9 @@
                     <a href="#" class="mr-2" style="color: #000;">500 <span style="color: #bbb;">Sold</span></a>
                 </p>
             </div>
-            <p>$120.00</p>
-            <p class="desc">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-            <p class="desc">On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+            <p>@Model.Price</p>
+            <p class="desc">@Model.Description</p>
+            <p class="desc">@Model.ShopDescription</p>
             <p class="aydacimi" style="margin-top:-70px"><a href="" class="btn btn-primary py-3 px-5 mr-2">Add to Cart</a><a href="" class="btn btn-primary py-3 px-5">Buy now</a></p>
         </div>
 
