--- a/BeluqaTahir/BeluqaTahir.WebUI/Areas/Admin/Views/Products/Index.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Areas/Admin/Views/Products/Index.cshtml
@@ -41,7 +41,7 @@
                     <th>
                         <img width="50" height="50" class="img-fluid" src="~/assets/images/@item.ImagePati" />
                     </th>
-                    <th>@item.FullName</th>
+                    <th>@item.Name</th>
                     <td>
                        @item.ProductTypes.Name
                     </td>
