--- a/BeluqaTahir/BeluqaTahir.WebUI/Areas/Admin/Views/Products/Create.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Areas/Admin/Views/Products/Create.cshtml
@@ -23,6 +23,11 @@
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                         <div class="form-group">
+                            <label asp-for="FullName" class="control-label"></label>
+                            <input asp-for="FullName" class="form-control" />
+                            <span asp-validation-for="FullName" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
                             <label asp-for="Price" class="control-label"></label>
                             <input asp-for="Price" class="form-control">
                             <span asp-validation-for="Price" class="text-danger"></span>
