--- a/BeluqaTahir/BeluqaTahir.WebUI/Areas/Admin/Views/HappyClients/Index.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Areas/Admin/Views/HappyClients/Index.cshtml
@@ -10,7 +10,7 @@
 
 <h1 style="text-align:center">Blogs Layout</h1>
 <div>
-    @*@Model.GetPagenation(Url, "index", "Admin")*@
+    @Model.GetPagenation(Url, "index", "Admin")
 </div>
 <table class="table table-striped" border="1">
     <thead>
