--- a/BeluqaTahir/BeluqaTahir.WebUI/Areas/Admin/Views/Products/Index.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Areas/Admin/Views/Products/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div>
-    @*@Model.GetPagenation(Url, "index", "Admin")*@
+    @Model.GetPagenation(Url, "index", "Admin")
 </div>
 
 <div style="display:flex">
