Account Details Push

--- a/BeluqaTahir/BeluqaTahir.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -132,6 +132,17 @@
                 </a>
             </li>
 
+            <li class="">
+                <a asp-controller="Accountdetails" asp-action="index" aria-expanded="false">
+                    <div class="nav_icon_small">
+                        <img src="~/assets/images/menu-icon/1.svg" alt="">
+                    </div>
+                    <div class="nav_title">
+                        <span>Accountdetails</span>
+                    </div>
+                </a>
+            </li>
+
 
 
 
