--- a/BeluqaTahir/BeluqaTahir.WebUI/Views/Home/Index.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Views/Home/Index.cshtml
@@ -85,7 +85,10 @@
 
                                 <li>
                                     <a href="#contact-section" class="nav-link">
-                                        <span><i class="fas fa-shopping-basket"></i></span>
+                                        <span>
+                                        <i class="fas fa-shopping-basket"></i>
+                                        </span>
+                                        <sup>3</sup>
                                     </a>
                                 </li>
 
