--- a/BeluqaTahir/BeluqaTahir.WebUI/Views/Blog/Index.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Views/Blog/Index.cshtml
@@ -86,6 +86,7 @@
                                 <li>
                                     <a href="#contact-section" class="nav-link">
                                         <span><i class="fas fa-shopping-basket"></i></span>
+                                        <sup>@ViewBag.basket</sup>
                                     </a>
                                 </li>
 
