--- a/BeluqaTahir/BeluqaTahir.WebUI/Views/Home/Register.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Views/Home/Register.cshtml
@@ -81,6 +81,7 @@
                                 <li>
                                     <a href="#contact-section" class="nav-link">
                                         <span><i class="fas fa-shopping-basket"></i></span>
+                                        <sup>3</sup>
                                     </a>
                                 </li>
 
