--- a/BeluqaTahir/BeluqaTahir.WebUI/Views/Blog/Details.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Views/Blog/Details.cshtml
@@ -162,81 +162,96 @@
                     </p>
                 </div>
             </div>
-            <h2 style="margin-top:50px">6 Comments</h2>
+            <h2 style="margin-top:50px">@Model.BlogPosts.Comments.Count() Comments</h2>
 
 
-
-            <ul style="margin-top:50px" class="comment-list">
-                @foreach (var comment in Model.BlogPosts.Comments.Where(c => c.ParentId == null))
-                {
-                    <li class="comment">
-                        <div class="vcard bio">
-                            <img src="/assets/images/blog-single.jpg">
-                        </div>
-                        <div class="comment-body">
-                            <h3>@($"{comment.CreateByUser?.UserName.ToUpper()}")</h3>
-                            <div class="meta">@comment.CreateData.ToString("MMMM d,yyyy HH:mm")</div>
-                            <p class="context1">@comment.Comment</p>
-                            <p>
-                                <a href="#" class="reply">Reply</a>
-                            </p>
-                        </div>
-
-                    </li>
-                    @foreach (var subcomments in GetComments(comment))
+            <div class="comments">
+                <ul id="faking" style="list-style-type:none;margin-left:-38px;margin-top:-190px">
+                    @foreach (var item in Model.BlogPosts.Comments?.Where(a => a.ParentId == null))
                     {
-                        <ul class="children">
-                            <li style="margin-top: 50px;" class="comment">
-                                <div class="vcard bio">
-                                    <img src="/assets/images/blog-single.jpg" alt="Image placeholder">
-                                </div>
-                                <div class="comment-body">
-                                    <h3>@($"{comment.CreateByUser?.UserName.ToUpper()}")</h3>
-                                    <div class="meta">@subcomments.CreateData.ToString("MMMM d,yyyy HH:mm")</div>
-                                    <p>@subcomments.Comment</p>
-                                    <p><a href="#" class="reply">Reply</a></p>
+                        <li style="margin-top:270px" class="comment" id="#c-@item.Id" data-comment-id="@item.Id">
+                            <figure class="comment-media">
+                                <a href="#">
+                                    <img style="width:50px;height:16%;border-radius:50%;" src="~/assets/images/blog-single.jpg" alt="avatar">
+                                </a>
+                            </figure>
+                            <div style="margin-top:-60px" class="comment-body">
+                                <div class="comment-user">
+                                    <h4>
+                                        <a href="#">
+
+                                            @item.CreateByUser?.UserName
+
+
+                                        </a>
+                                    </h4>
+                                    <span style="margin-top:12px;display:inline-block;color:#b7472a" class="comment-date">@item.CreateData.ToShortDateString()</span>
                                 </div>
 
+                                <div class="comment-content mb-2">
+                                    <p style="margin-top:7px">
+                                        @item.Comment
+                                    </p>
+                                </div>
+                                <a href="#" class="btn btn-link btn-reveal-right btn-comment-reply">
+                                    REPLY<i class="d-icon-arrow-right"></i>
+                                </a>
+                            </div>
+                        </li>
+                        @foreach (var subComment in GetComments(item))
+                        {
+                            <li class="comment ml-10" id="#c-@subComment.Id" data-comment-id="@subComment.Id">
+                                <figure class="comment-media">
+                                    <a href="#">
+                                        <img style="width:50px;height:16%;border-radius:50%;margin-left:30px;margin-top:135px" src="~/assets/images/blog-single.jpg" alt="avatar">
+                                    </a>
+                                </figure>
+                                <div style="margin-top:-60px" class="comment-body">
+                                    <div class="comment-user">
+                                                   <h4>
+                                            <a style="margin-left:25px" href="#">
+
+
+                                                @item.CreateByUser?.UserName
+
+                                            </a>
+                                        </h4>
+                                        <span style="display:inline-block;color:#b7472a;margin-left:26px" class="comment-date">@subComment.CreateData.ToShortDateString()</span>
+                             
+                                    </div>
+
+                                    <div class="comment-content mb-2">
+                                        <a style="margin-left:26px" href="#c-@subComment.ParentId">@@@($"{subComment.Parent.CreateByUser?.UserName}")</a> &nbsp; &nbsp;
+                                        <p style="margin-top:7px;margin-left:28px">
+                                            @subComment.Comment
+                                        </p>
+                                    </div>
+                                    <a href="#" class="btn btn-link btn-reveal-right btn-comment-reply">
+                                        REPLY<i class="d-icon-arrow-right"></i>
+                                    </a>
+                                </div>
                             </li>
-                        </ul>
+                        }
                     }
 
-                }
 
+                </ul>
+            </div>
 
-
-
-
-
-
-
-
-            </ul>
-
-
-            <div class="comment-form-wrap ">
-                <h3 class="mb-5">Leave a comment</h3>
-                <form action="#" class="p-5 bg-light">
-                    <div class="form-group">
-                        <label for="name">Name *</label>
-                        <input type="text" class="form-control" id="name">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email *</label>
-                        <input type="email" class="form-control" id="email">
-                    </div>
-                    <div class="form-group">
-                        <label for="website">Website</label>
-                        <input type="url" class="form-control" id="website">
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea name="" id="message" class="form-control"></textarea>
-                    </div>
-                    <input type="submit" value="Post Comment" class="btn bbn btn-primary">
-
+            <!-- End Comments -->
+            <div class="reply">
+                <form method="post" id="replyForm">
+                    <div id="replyToComment"></div>
+                    <input type="hidden" name="postId" value="@Model.BlogPosts.Id" />
+                    <textarea style="border:1px solid beige;display:inline-block;margin-top:115px" name="comment" cols="30" rows="6" class="form-control mb-4"
+                              placeholder="Comment *" required></textarea>
+                    <button style="margin-top:10px" type="submit" class="btn btn-primary btn-rounded">
+                        POST COMMENT<i class="d-icon-arrow-right"></i>
+                    </button>
                 </form>
             </div>
+            <!-- End Reply -->
+
 
 
         </div>
@@ -330,3 +345,180 @@
 </div>
 
 
+@section addcss
+{
+    <style>
+
+        #faking li:first-child {
+            margin-top: 100px;
+        }
+
+        #replyToComment:not(:empty) {
+            border: 1px solid #1e1e1e;
+            max-width: 100%;
+            color: #999;
+            padding: 20px;
+            margin-left: 0;
+            position: relative;
+            margin-top: 195px;
+            height: 300px;
+            list-style: none;
+        }
+
+            #replyToComment:not(:empty) .comment {
+                margin-top: 0px !important;
+            }
+
+
+        #replyToComment li.comment-sub {
+            margin: 0;
+        }
+
+        #replyToComment .remove-selected-comment {
+            color: red;
+            position: absolute;
+            font-size: 2rem;
+            right: 8px;
+            top: 0;
+            padding: 10px;
+        }
+    </style>
+}
+@section addjs
+{
+    <script>
+        $(document).ready(function () {
+            $(".btn-comment-reply").click(function (e) {
+                e.preventDefault();
+
+                $("#replyToComment").html('<a href="javascript:removeReplySelected()" class="remove-selected-comment">&times;</a>').append($(e.currentTarget).closest(".comment").clone());
+
+            });
+
+            $("#replyForm").submit(function (e) {
+                e.preventDefault();
+
+                let formData = new FormData(e.currentTarget);
+                let toCommentId = $("#replyToComment li.comment").data("comment-id");
+
+                if (toCommentId != undefined) {
+                    formData.set("commentId", toCommentId);
+                }
+                console.log(formData);
+                $.ajax({
+                    url: '@Url.Action("PostComment")',
+                    type: 'POST',
+                    data: formData,
+                    contentType: false,
+                    processData: false,
+                    dataType:"json",
+                    success: function (response) {
+                        if (response.error == false) {
+                            toastr.success(response.message, "Successfully!")
+                            location.reload();
+                        }
+                        else {
+                            toastr.error(response.message, 'Error!');
+                            location.reload();
+                        }
+                    },
+                    error: function (response) {
+                        if (response.statusText == "parsererror") {
+                            if (toCommentId != undefined) {
+                                $(response.responseText).insertAfter($(`#c-${toCommentId}`));
+
+                                $("#replyToComment").html('');
+                                e.currentTarget.reset();
+                                location.reload();
+                            }
+                            else {
+                                $("div.comments ul").append($(response.responseText));
+                                location.reload();
+                            }
+                            location.reload();
+                        }
+                        location.reload();
+                    }
+
+                })
+
+
+            })
+        })
+
+        function removeReplySelected() {
+            $("#replyToComment").html("");
+        }
+
+
+    </script>
+
+
+
+}
+
+
+@*}<ul style="margin-top:50px" class="comment-list">
+        @foreach (var comment in Model.BlogPosts.Comments.Where(c => c.ParentId == null))
+        {
+            <li class="comment" id="#c-@comment.Id" data-comment-id="@comment.Id">
+                <div class="vcard bio">
+                    <img src="/assets/images/blog-single.jpg">
+                </div>
+                <div class="comment-body">
+                    <h3>@($"{comment.CreateByUser?.UserName.ToUpper()}")</h3>
+                    <div class="meta">@comment.CreateData.ToString("MMMM d,yyyy HH:mm")</div>
+                    <p class="context1">@comment.Comment</p>
+                    <p>
+                        <a class="reply  btn-comment-reply">Reply</a>
+                    </p>
+                </div>
+
+            </li>
+            @foreach (var subcomments in GetComments(comment))
+            {
+                <ul class="children">
+                    <li style="margin-top: 50px;" class="comment" id="#c-@subcomments.Id" data-comment-id="@subcomments.Id">
+                        <div class="vcard bio">
+                            <img src="/assets/images/blog-single.jpg" alt="Image placeholder">
+                        </div>
+                        <div class="comment-body">
+                            <a href="#c-@subcomments.ParentId">@($"{comment.CreateByUser?.UserName.ToUpper()}")</a>
+                            <div class="meta">@subcomments.CreateData.ToString("MMMM d,yyyy HH:mm")</div>
+                            <p>@subcomments.Comment</p>
+                            <p><a class="reply btn-comment-reply">Reply</a></p>
+                        </div>
+
+                    </li>
+                </ul>
+            }
+
+        }
+
+
+
+
+
+
+
+
+
+    </ul>
+
+
+    <div class="comment-form-wrap ">
+        <h3 class="mb-5">Leave a comment</h3>
+        <form method="post" class="p-5 bg-light" id="replyForm">
+            <div id="replyToComment"></div>
+
+            <div class="form-group">
+                <label for="message">Message</label>
+                <input type="hidden" name="postId" value="@Model.BlogPosts.Id" />
+
+                <textarea name="" id="message" class="form-control"></textarea>
+            </div>
+
+            <input type="submit" value="Post Comment" class="btn bbn btn-primary">
+
+        </form>
+    </div>*@
