--- a/BeluqaTahir/BeluqaTahir.WebUI/Views/Shop/ShoppingCard.cshtml
+++ b/BeluqaTahir/BeluqaTahir.WebUI/Views/Shop/ShoppingCard.cshtml
@@ -4,6 +4,7 @@
 }
 
 
+
 <div class="site-navbar-wrap">
     <div class="site-navbar-top">
         <div class="container py-3">
@@ -142,26 +143,27 @@
                                     <img style="height:100px;width:100px;" src="/assets/images/@item.ImagePati" alt="">
                                 </td>
                                 <td>
-                                    <div style="margin-left:17px" class="email">
+                                    <div style="margin-left: 19px; margin-top: 36px; font-size: 22px; color: #a23f25" class="email">
                                         <span>@item.Name</span>
                                     </div>
                                 </td>
 
-                                <td style="padding-left:25px">@item.Price</td>
+                                <td style="padding-left: 41px; padding-top: 49px; display: inline-block; font-size: 20px; color: #a23f25">@item.Price.ToString("$0.00")</td>
 
                                 <td class="quantity">
                                     <div style="padding-left:30px;color:red" class="input-group">
-                                        <input type="text" name="quantity" class="quantity form-control input-number" value="@item.Count" min="1" max="100">
+                                        <input style="margin-left: -10px; margin-top: 30px; font-size: 20px; color: #a23f25" type="text" class="quantity form-control input-number" value="@item.Count" >
                                     </div>
                                 </td>
-                                @*//<td>@item.Amount</td>*@
+                                <td style="padding-top: 53px; color: #a23f25;padding-left:44px;">@item.Amount.ToString("$0.00")</td>
                                 <td>
                                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                        <span aria-hidden="true"><i class="fa fa-close"></i></span>
+                                        <span aria-hidden="true"><i style="color: #a23f25" class="fa fa-close"></i></span>
                                     </button>
                                 </td>
                             </tr>
                         }
+
                     </tbody>
                 </table>
             </div>
@@ -170,22 +172,9 @@
             <div class="col col-lg-5 col-md-6 mt-5 cart-wrap ftco-animate">
                 <div class="cart-total mb-3">
                     <h3>Cart Totals</h3>
-                    <p class="d-flex">
-                        <span>Subtotal</span>
-                        <span>$20.60</span>
-                    </p>
-                    <p class="d-flex">
-                        <span>Delivery</span>
-                        <span>$0.00</span>
-                    </p>
-                    <p class="d-flex">
-                        <span>Discount</span>
-                        <span>$3.00</span>
-                    </p>
-                    <hr>
                     <p class="d-flex total-price">
                         <span>Total</span>
-                        <span>$17.60</span>
+                        <span></span>
                     </p>
                 </div>
                 <p class="text-center"><a href="checkout.html" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
@@ -197,7 +186,6 @@
 @section addcss{
 
     <style>
-
         .ftco-section {
             padding: 6em 0;
             position: relative;
@@ -249,4 +237,3 @@
     </style>
 
 }
-
